--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Puzzle Game</title>
-    <script src="https://unpkg.com/@tw5/embed"></script>
     <style>
       html, body {
         margin: 0;
         height: 100%;
-        overflow: hidden;
+        background: #000;
+      }
+      iframe {
+        border: none;
+        width: 100vw;
+        height: 100vh;
       }
     </style>
   </head>
   <body>
-    <tw-embed src="Puzzle 2.sb3" width="100%" height="100%" allowfullscreen></tw-embed>
+    <iframe src="https://turbowarp.org/Puzzle 2.sb3" allowfullscreen></iframe>
   </body>
 </html>
